# klok

./: .gitignore  .gitlab-ci.yml  README.md  project.yml
.reuse/: dep5
apps/klok/: Cargo.toml  cargo_build.sh  pkg.yml  syscfg.yml
apps/klok/.cargo/: config.toml
apps/klok/src/: battery.rs  lib.rs  main.c
battery_measurement/: Cargo.toml  Readme.md
battery_measurement/data/charging/: low-brightness-2021-01-24.txt  low-brightness-2021-01-26.txt  pinetime-prod-2020-10-30.txt  pinetime-prod-2021-01-17.txt  pinetime-prod-2021-01-18.txt
battery_measurement/data/discharging-air/: low-brightness-2021-01-24.txt  low-brightness-2021-01-28.txt  low-brightness-2021-02-03.txt  pinetime-prod-2020-10-29.txt  pinetime-prod-2021-01-18.txt  pinetime-prod-2021-01-22.txt
battery_measurement/data/discharging-wrist/: low-brightness-2021-01-26.txt  low-brightness-2021-01-31.txt  pinetime-prod-2020-10-13.txt  pinetime-prod-2021-01-17.txt  pinetime-prod-2021-01-19.txt
battery_measurement/img/: discharging-wrist.png.license
battery_measurement/src/: main.rs
docs/: device_information.md  installation.md  upgrade.md
libs/battery_measurement/: pkg.yml
libs/battery_measurement/include/battery_measurement/: battery_measurement.h
libs/battery_measurement/src/: battery_measurement.c
targets/boot-pinetime/: pkg.yml  target.yml
targets/klok-pinetime/: pkg.yml  target.yml
targets/klok-pinetime-release/: pkg.yml  target.yml
targets/unittest/: pkg.yml  target.yml
watchface/: .gitignore  Cargo.toml
watchface/data/: README.md  numbers.png.license  numbers.raw  numbers.xcf  overpass-mono-bold.otf.license
watchface/src/: battery_icon.rs  drawable_utils.rs  font.rs  lib.rs  main.rs  watchface.rs
