# Copyright (C) 2020 Casper Meijn <casper@meijn.net>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "rust-klok"
version = "0.1.0"
authors = ["Casper Meijn <casper@meijn.net>"]
edition = "2018"

[dependencies]
panic-semihosting = "0.5.3"
mynewt-pinetime-bsp = { version = "0.1.0", path = "../../repos/mynewt-rust/mynewt-pinetime-bsp" }
mynewt-core-hw-hal = { version = "0.1.0", path = "../../repos/mynewt-rust/mynewt-core-hw-hal" }
mynewt-core-kernel-os = { version = "0.1.0", path = "../../repos/mynewt-rust/mynewt-core-kernel-os" }
mynewt-core-mgmt-imgmgr = { version = "0.1.0", path = "../../repos/mynewt-rust/mynewt-core-mgmt-imgmgr" }
mynewt-core-sys-reboot = { version = "0.1.0", path = "../../repos/mynewt-rust/mynewt-core-sys-reboot" }
mynewt-core-sys-config = { version = "0.1.0", path = "../../repos/mynewt-rust/mynewt-core-sys-config" }
mynewt-nimble-host = { version = "0.1.0", path = "../../repos/mynewt-rust/mynewt-nimble-host" }
mynewt-nimble-host-services = { version = "0.1.0", path = "../../repos/mynewt-rust/mynewt-nimble-host-services" }
st7789 = "0.5.0"
display-interface-spi = "0.4.0"
embedded-graphics = "0.6.2"
cortex-m-semihosting = "0.3.5"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
watchface = { version = "0.1.0", path = "../../watchface"}
heapless = "0.5.5"

[lib]
crate-type = ["staticlib"]

[profile.dev]
#TODO: Enable LTO when upstream bug is fixed: https://github.com/rust-lang/compiler-builtins/issues/347
#codegen-units = 1
#lto = true

[profile.release]
codegen-units = 1
debug = true
lto = true
