# Copyright (C) 2020 Casper Meijn <casper@meijn.net>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "rust-klok"
version = "0.1.0"
authors = ["Casper Meijn <casper@meijn.net>"]
edition = "2018"

[dependencies]
panic-semihosting = "0.5.4"
mynewt = { version = "0.1.0", path = "../../repos/mynewt-rust/mynewt" }
st7789 = "0.5.0"
display-interface-spi = "0.4.0"
embedded-graphics = "0.6.2"
cortex-m-semihosting = "0.3.5"
embedded-hal = { version = "0.2.4", features = ["unproven"] }

[dependencies.watchface]
version = "0.3"
default-features = false
features = []

[lib]
crate-type = ["staticlib"]

[profile.dev]
#TODO: Enable LTO when upstream bug is fixed: https://github.com/rust-lang/compiler-builtins/issues/347
#codegen-units = 1
#lto = true

[profile.release]
codegen-units = 1
debug = true
lto = true
